set config and bind data

--- a/pages/about/about.wxss
+++ b/pages/about/about.wxss
@@ -1,3 +1,17 @@
 .info{
   font-weight: bold;
 }
+
+.about-avatar{
+  width:375rpx;
+  height:375rpx;
+  border-radius:50%;
+}
+
+.text-bold{
+  font-weight:bold;
+  font-size:60rpx;
+}
+
+
+
