--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -1,8 +1,8 @@
 <!-- <text class="info">Hello world</text> -->
 <!-- <text>{{time}}</text> -->
-<view>
-  <image src="/images/my_avatar.jpg"></image>
-  <text>电影周周看</text>
-  <text>我每周推荐一部好片</text>
+<view class="container">
+  <image class="about-avatar" src="/images/my_avatar.jpg"></image>
+  <text class="text-bold">电影周周看</text>
+  <view><text>我</text><navigator class="navigator-default" open-type="switchTab" style="display:inline" hover-class="navigator-hover" url="/pages/weekly/weekly">每周推荐</navigator><text>一部好片</text></view>
   <text>我的微博：weibo.com/xxx</text>
 </view>
