--- a/pages/weekly/weekly.wxml
+++ b/pages/weekly/weekly.wxml
@@ -6,5 +6,5 @@
   <text>{{thisWeekMovie.comment}}</text>
   <text>{{count+score}}</text>
   <text>{{score>=60?'yes':'no'}}</text>
-  <text style="font-size:16px;color:red">强烈推荐</text>
+  <text style="font-size:16px;color:red" hidden="{{!thisWeekMovie.isHighlyRecommended}}">强烈推荐</text>
 </view>
