--- a/pages/weekly/weekly.wxss
+++ b/pages/weekly/weekly.wxss
@@ -1,1 +1,26 @@
 /* pages/weekly/weekly.wxss */
+.swiper-movie{
+  width: 100%;
+  height: 80vh;
+}
+.movie>view.container{
+  margin:0 20rpx;
+  height: 100%;
+  background-color: #ccc;
+}
+.movie{
+  /* display: flex;
+  align-items:center; */
+  /* justify-content: flex-start;  */
+  /* align-self: flex-start; */
+}
+
+.movie image{
+  width: 300rpx;
+  height: 300rpx;
+}
+.movie-desc{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+} 
